--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "jest-circus": "26.6.0",
     "jest-resolve": "26.6.0",
     "jest-watch-typeahead": "0.6.1",
+    "leaflet": "^1.7.1",
     "mini-css-extract-plugin": "0.11.3",
     "optimize-css-assets-webpack-plugin": "5.0.4",
     "pnp-webpack-plugin": "1.6.4",
@@ -53,6 +54,7 @@
     "react-app-polyfill": "^2.0.0",
     "react-dev-utils": "^11.0.3",
     "react-dom": "^17.0.2",
+    "react-leaflet": "^3.2.0",
     "react-refresh": "^0.8.3",
     "resolve": "1.18.1",
     "resolve-url-loader": "^3.1.2",
@@ -147,5 +149,12 @@
     "presets": [
       "react-app"
     ]
+  },
+  "devDependencies": {
+    "@types/leaflet": "^1.7.4",
+    "react-leaflet": "2.7.0",
+    "react-leaflet-markercluster": "2.0.0",
+    "leaflet": "^1.6.0",
+    "leaflet.markercluster": "^1.5.0"
   }
 }
