--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "mapmodeljs",
+  "homepage": "https://vishwjeet-singh.github.io/Map-place-positions",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -34,6 +35,7 @@
     "eslint-webpack-plugin": "^2.5.2",
     "file-loader": "6.1.1",
     "fs-extra": "^9.0.1",
+    "gh-pages": "^3.2.3",
     "html-webpack-plugin": "4.5.0",
     "identity-obj-proxy": "3.0.0",
     "jest": "26.6.0",
@@ -71,6 +73,8 @@
     "workbox-webpack-plugin": "5.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js"
@@ -152,9 +156,9 @@
   },
   "devDependencies": {
     "@types/leaflet": "^1.7.4",
-    "react-leaflet": "2.7.0",
-    "react-leaflet-markercluster": "2.0.0",
     "leaflet": "^1.6.0",
-    "leaflet.markercluster": "^1.5.0"
+    "leaflet.markercluster": "^1.5.0",
+    "react-leaflet": "2.7.0",
+    "react-leaflet-markercluster": "2.0.0"
   }
 }
